[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ledger"
version = "0.1.0"
description = "Middleware Python pour tracer et attribuer les coûts API d'une flotte d'agents IA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
cli = []

[project.scripts]
agent-ledger = "agent_ledger.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_ledger*"]
